# hax

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  meson.build
docs/: comment_audit_todo.md  configuration.md  debugging.md  providers.md  usage.md
scripts/: check.sh  diff_demo.txt  idle_demo.txt  mock_demo.txt  mock_layout.txt  mock_openai_server.py  pause_demo.txt  stream_demo.py  stream_demo.sh  theme_demo.txt  vision_fixtures.py  web_fetch_demo.txt
src/: agent.c  agent.h  agent_core.c  agent_core.h  agent_dispatch.c  agent_dispatch.h  agent_env.c  agent_env.h  agent_loop.c  agent_loop.h  agent_tool.c  agent_tool.h  ansi.h  api_error.c  api_error.h  bg.c  bg.h  busy.c  busy.h  catalog.c  catalog.h  clipboard.c  cmd_classify.c  cmd_classify.h  compact.c  compact.h  config.c  config.h  ctrl_strip.c  ctrl_strip.h  diff.c  diff.h  disp.c  disp.h  env.c  env.h  file_mention.c  file_mention.h  fs.c  fs.h  (+53 more)
src/providers/: anthropic.c  anthropic.h  anthropic_compat.c  anthropic_compat.h  anthropic_events.c  anthropic_events.h  codex.c  codex.h  codex_events.c  codex_events.h  config_provider.c  config_provider.h  llamacpp.c  llamacpp.h  mock.c  mock.h  ollama.c  ollama.h  openai.c  openai.h  openai_compat.c  openai_compat.h  openai_events.c  openai_events.h  openrouter.c  openrouter.h  probe.c  probe.h  registry.c  registry.h
src/render/: ctrl_strip.c  diff_color.c  diff_color.h  disp.c  disp.h  markdown.c  markdown.h  markdown_scan.c  markdown_scan.h  markdown_table.c  markdown_table.h  markdown_wrap.c  markdown_wrap.h  progress.c  progress.h  render_ctx.c  render_ctx.h  spinner.c  spinner.h  tool_render.c  tool_render.h
src/system/: bg_job.c  bg_job.h  diff.c  diff.h  fs.c  fs.h  keepawake.c  keepawake.h  os.c  os.h  path.c  path.h  spawn.c  spawn.h  tempfiles.c  tempfiles.h
src/terminal/: ansi.h  clipboard.c  clipboard.h  input.c  input.h  input_core.c  input_core.h  interrupt.c  interrupt.h  notify.c  notify.h  picker.c  picker.h  picker_core.c  picker_core.h  theme.c  theme.h  ui.c  ui.h
src/text/: base64.c  base64.h  html_markdown.c  html_markdown.h  utf8.c  utf8_sanitize.c
src/tools/: bash.c  bash_cd_strip.c  bash_cd_strip.h  bash_classify.c  bash_classify.h  bash_export.c  bash_export.h  bash_shell.c  bash_shell.h  edit.c  image_sniff.c  image_sniff.h  path_preprocess.c  path_preprocess.h  read.c  web_fetch.c  write.c
src/transport/: api_error.c  api_error.h  http.c  http.h  retry.c  retry.h  sse.c
tests/: harness.h  meson.build  test_agent.c  test_agent_core.c  test_agent_dispatch.c  test_agent_env.c  test_agent_loop.c  test_agent_tool.c  test_api_error.c  test_bg.c  test_catalog.c  test_catalog_fetch.c  test_clipboard.c  test_cmd_classify.c  test_compact.c  test_config.c  test_ctrl_strip.c  test_diff.c  test_disp.c  test_env.c  test_file_mention.c  test_harness.c  test_input_core.c  test_interrupt.c  test_markdown.c  test_paste_image.c  test_path.c  test_retry.c  test_select_config.c  test_select_model.c  test_session.c  test_slash.c  test_spawn.c  test_sse.c  test_term_lite.c  test_tool_render.c  test_trace.c  test_transcript.c  test_turn.c  test_utf8.c  (+2 more)
tests/providers/: test_anthropic_events.c  test_anthropic_messages.c  test_anthropic_models.c  test_codex.c  test_codex_events.c  test_codex_messages.c  test_config_provider.c  test_llamacpp.c  test_model_meta.c  test_openai_events.c  test_openai_messages.c  test_openai_reasoning.c  test_registry.c
tests/render/: test_ctrl_strip.c  test_diff_color.c  test_disp.c  test_markdown.c  test_markdown_scan.c  test_markdown_table.c  test_markdown_wrap.c  test_tool_render.c
tests/system/: test_bg_job.c  test_diff.c  test_fs.c  test_keepawake.c  test_os.c  test_path.c  test_spawn.c  test_tempfiles.c
tests/terminal/: test_clipboard.c  test_input_core.c  test_interrupt.c  test_picker.c  test_picker_core.c  test_theme.c
tests/text/: test_base64.c  test_html_markdown.c  test_utf8.c  test_utf8_sanitize.c
tests/tools/: test_bash.c  test_bash_cd_strip.c  test_bash_classify.c  test_edit.c  test_image_sniff.c  test_read.c  test_web_fetch.c  test_write.c
tests/transport/: test_api_error.c  test_retry.c  test_sse.c
